--- a/MichailSeth_E2.ipynb
+++ b/MichailSeth_E2.ipynb
@@ -6,7 +6,7 @@
       "name": "MichailSeth_E2.ipynb",
       "provenance": [],
       "mount_file_id": "1wb9Fq7jpchVMcIe9WKahGHE3K1OH04aL",
-      "authorship_tag": "ABX9TyMWSZeQtuxl5BilqtqGnSsy",
+      "authorship_tag": "ABX9TyP8ZbnD0Pv6WyI45ju1nYTI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1728,13 +1728,23 @@
       "cell_type": "code",
       "source": [
         "#alternatively\n",
-        "f = lambda xs,ys: [x + y for x, y in zip(xs, ys)]"
+        "f = lambda xs,ys: [x + y for x, y in zip(xs, ys)]\n",
+        "f([1,2,35,2,0],[0,2,2,33,0])"
       ],
       "metadata": {
         "id": "_sKcMd6fL8Or"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "uL4q4ng5aOoR"
+      }
     },
     {
       "cell_type": "code",
@@ -1771,10 +1781,23 @@
     {
       "cell_type": "code",
       "source": [
-        "#alternatively"
+        "#alternatively\n",
+        "f = lambda xs,ys: [x * y for x, y in zip(xs, ys)]\n",
+        "f([1,2,35,2,0],[0,2,2,33,0])"
       ],
       "metadata": {
         "id": "W_44_YSKMAYP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[x * y for x, y in zip([1,2,35,2,0],[0,2,2,33,0])]"
+      ],
+      "metadata": {
+        "id": "gZEdICl9cW93"
       },
       "execution_count": null,
       "outputs": []
