--- a/MichailSeth_E2.ipynb
+++ b/MichailSeth_E2.ipynb
@@ -6,7 +6,7 @@
       "name": "MichailSeth_E2.ipynb",
       "provenance": [],
       "mount_file_id": "1wb9Fq7jpchVMcIe9WKahGHE3K1OH04aL",
-      "authorship_tag": "ABX9TyP8ZbnD0Pv6WyI45ju1nYTI",
+      "authorship_tag": "ABX9TyOKU+VyF5Kk4G1CchUjyfCH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "id": "hR9YjaCx6Osu",
         "outputId": "5b0731a4-6fda-43b5-92dc-837739faf1f9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +83,7 @@
         "id": "UN0f0Hnp7WFN",
         "outputId": "e1b92539-718d-4bdb-edf7-b0277aefc989"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
         "id": "u6D5auWG8Py0",
         "outputId": "3d797bdb-1717-4e72-de69-1972ff00ecb7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -660,7 +660,7 @@
         },
         "outputId": "2c4b21fd-5a64-42dd-ac5a-351766654581"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -712,7 +712,7 @@
         },
         "outputId": "f8856ea4-9efa-480e-95f6-725795c53809"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -755,7 +755,7 @@
         },
         "outputId": "c9a93bf4-7301-40ac-d8a5-0ba7ae8054dd"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -822,7 +822,7 @@
         "id": "HPnfvyrj-hVe",
         "outputId": "2f2e9b95-7dc2-4720-a135-c0fbccd8562e"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -916,7 +916,7 @@
         "id": "dD7d96yp_2v-",
         "outputId": "abec06ad-c109-4155-a366-c933bec99fbb"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1011,7 +1011,7 @@
         "id": "kuQtBbMcA2Q-",
         "outputId": "3fd59cc8-a634-4ee2-faba-dfbc416580ef"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1805,7 +1805,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#add 2 dictionaries, check length and presence of keys\n",
+        "#add 2 dictionaries, check length and presence of keys. modifies original, doesn't handle different length vecs\n",
         "def sadd(s1,s2):\n",
         "  if len(s1) == len(s2):\n",
         "    for key in s1.keys():\n",
@@ -1837,7 +1837,19 @@
     {
       "cell_type": "code",
       "source": [
-        "#alternatively"
+        "#alternatively\n",
+        "def iter_dicts(d1: dict, d2: dict):\n",
+        "  keys = set([*d1.keys() *d2.keys()])\n",
+        "  for key in keys:\n",
+        "    yeild key, d1.get(key, 0), d2.get(key, 0)\n",
+        "def sparse_add(d1: dict, d2: dict) -> dict:\n",
+        "  s = {}\n",
+        "  for k, v1, v2 in iter_dicts(d1, d2):\n",
+        "    s[k] = v1 + v2\n",
+        "\n",
+        "  return s\n",
+        "\n",
+        "sparse_add({0:1,1:2,2:35,3:2,4:0},{0:0,1:2,2:2,3:33,4:0})"
       ],
       "metadata": {
         "id": "zEged5FtMAgK"
@@ -1881,7 +1893,15 @@
     {
       "cell_type": "code",
       "source": [
-        "#alternatively"
+        "#alternatively\n",
+        "def sparse_mult(d1: dict, d2: dict) -> dict:\n",
+        "  s = {}\n",
+        "  for k, v1, v2 in iter_dicts(d1, d2):\n",
+        "    val = v1 * v2\n",
+        "    if val != 0:\n",
+        "      s[k] = val\n",
+        "\n",
+        "  return s"
       ],
       "metadata": {
         "id": "NwID0_rxMAoJ"
@@ -1925,7 +1945,18 @@
     {
       "cell_type": "code",
       "source": [
-        "#alternatively"
+        "#alternatively\n",
+        "def make_sparse(l: list) ->dict:\n",
+        "  d = {}\n",
+        "  for i, val in enumerate(l):\n",
+        "    if val != 0:\n",
+        "      d[i] = val\n",
+        "  return d\n",
+        "\n",
+        "def sparse_dense_add(d: dict, l: list) -> dict:\n",
+        "  d2 = make_sparse(l)\n",
+        "  return sparse_add(d, d2)\n",
+        "\n"
       ],
       "metadata": {
         "id": "9bvtZwW_MAw_"
@@ -1970,7 +2001,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#alternatively"
+        "#alternatively\n",
+        "def sparse_dense_mult(d: dict, l: list) -> dict:\n",
+        "  d2 = make_sparse(l)\n",
+        "  return sparse_mult(d, d2)"
       ],
       "metadata": {
         "id": "6homlw90MBmR"
