--- a/MichailSeth_E2.ipynb
+++ b/MichailSeth_E2.ipynb
@@ -6,7 +6,7 @@
       "name": "MichailSeth_E2.ipynb",
       "provenance": [],
       "mount_file_id": "1wb9Fq7jpchVMcIe9WKahGHE3K1OH04aL",
-      "authorship_tag": "ABX9TyOKU+VyF5Kk4G1CchUjyfCH",
+      "authorship_tag": "ABX9TyMUA+2oOWVqzKlsSUuyYbVB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2040,7 +2040,15 @@
     {
       "cell_type": "code",
       "source": [
-        "#\n"
+        "#\n",
+        "def rev_lu(d1: dict):\n",
+        "  rev = {}\n",
+        "  for k, v in d1.items():\n",
+        "    keys = rev.get(v, [])\n",
+        "    if k not in keys:\n",
+        "      keys.append(k)\n",
+        "    rev[v] = keys\n",
+        "  return rev\n"
       ],
       "metadata": {
         "id": "Ex4og2qPXWEA"
